[metadata]
name = httpie-oauth1
version = 1.2.2
author = Hoylen Sue
author_email = hoylen@hoylen.com
description = OAuth 1.0a authentication plugin for HTTPie.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/qcif/httpie-oauth1
project_urls =
    Bug Tracker = https://github.com/qcif/httpie-oauth1/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

